fix global navigation hover color on ie9

--- a/assets/sass/components/navigation.scss
+++ b/assets/sass/components/navigation.scss
@@ -221,7 +221,7 @@ Add `<div class="overlay"></div>` at the end of the `body` tag to display the gr
         background: -o-linear-gradient(top,  #f4f4f4 0%,#ffffff 10%,#ffffff 79%,#ffffff 91%,#dbdbdb 100%);
         background: -ms-linear-gradient(top,  #f4f4f4 0%,#ffffff 10%,#ffffff 79%,#ffffff 91%,#dbdbdb 100%);
         background: linear-gradient(to bottom,  #f4f4f4 0%,#ffffff 10%,#ffffff 79%,#ffffff 91%,#dbdbdb 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#dbdbdb',GradientType=0 );
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 );
 
 
 
